# SecretDetector

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.gui  LICENSE  README.md  README.ru.md  docker-compose.yml
config/: patterns.json
docker/: Dockerfile  docker-comopse.yml
installer/: install.sh  makeself.sh
installer/package/: README.txt  install.sh  patterns.json  secret_detector  secret_detector_gui  secret_detector_gui_wrapper.sh  secret_detector_wrapper.sh  uninstall.sh
installer/package/config/: patterns.json
installer/package/lib/: libfmt.so.12  libspdlog.so.1.16
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.h
src/core/: entropy_analyzer.cpp  entropy_analyzer.h  file_scanner.cpp  file_scanner.h  pattern_matcher.cpp  pattern_matcher.h  secret_detector.cpp  secret_detector.h
src/gui/: main_gui.cpp  mainwindow.cpp  mainwindow.h
src/utils/: config_manager.cpp  config_manager.h  export_manager.cpp  export_manager.h  file_utils.cpp  file_utils.h  logger.cpp  logger.h
tests/: test_secrets.cpp
